Style tweaks to give backoffice notifications more visibility

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2029,7 +2029,7 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 }
 
 .BackOfficeLayout .success {
-    border: 1px solid rgb(200,220,200);
+    border: 3px solid rgb(70, 131, 70);
     background-color: rgb(220,240,220);
 }
 
@@ -2040,8 +2040,13 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     font-style: normal;
 }
 
+.BackOfficeLayout .notification_box .error {
+    border: 3px solid #c84634;
+    background-color: #ffd7d1;
+}
+
 .BackOfficeLayout .notice {
-    border: 1px solid rgb(220,210,190);
+    border: 3px solid rgb(220,210,190);
     background-color: rgb(240,240,210);
     padding: 0.4em;
     margin-bottom: 1em;
@@ -2056,21 +2061,12 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 .preview-error-box,
 .BackOfficeLayout .ErrorBox,
 .BackOfficeLayout .error_box,
-.BackOfficeLayout .notification_box .error,
 .BackOfficeInstallationSyncView .sync_request_error_report {
     color: black;
     border: 1px dotted rgb(200,160,120);
     background-color: rgb(245,230,215);
     padding: 0.5em;
     margin: 1em 0;
-}
-
-.preview-error-box {
-    color: black;
-    border: 1px dotted rgb(200,160,120);
-    background-color: rgb(245,230,215);
-    padding: 0.5em;
-    margin: 0 1em 1em 1em;
 }
 
 .BackOfficeLayout .ErrorBox li,
