Bugfix: all the contextual buttons in ItemDisplay behaved as "edit".
The "click to edit" behavior of ItemDisplay conflicted with the buttosn in its
contextual menu: the clicks on the menu would bubble up and trigger that
behavior. To solve this issue, the javascript implementation of this behavior
has been dropped in favor of a proper form button.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3589,15 +3589,27 @@ div.success_label {
     text-decoration: none;
 }
 
-.BackOfficeLayout .ItemDisplay > .text_wrapper {
+.BackOfficeLayout .ItemDisplay > .label {
+    display: inline-block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    background-image: none;
+    background-color: transparent;
+    border: none;
+    box-shadow: none;
+}
+
+.BackOfficeLayout .ItemDisplay > .label .text_wrapper {
     border-bottom: 1px dotted #aaa;
+    display: inline-block;
 }
 
 .BackOfficeLayout .ItemDisplay:hover .text_wrapper {
     border-bottom-style: solid;
 }
 
-.BackOfficeLayout .ItemDisplay.item_context_menu_expanded > .text_wrapper {
+.BackOfficeLayout .ItemDisplay.item_context_menu_expanded .text_wrapper {
     background-color: #d9d9d9;
     border-radius: 0.4em;
     border: none;
