Fixed the CSS selector for the hover effect of the label in ItemDisplay

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3605,7 +3605,7 @@ div.success_label {
     display: inline-block;
 }
 
-.BackOfficeLayout .ItemDisplay:hover .text_wrapper {
+.BackOfficeLayout .ItemDisplay:hover > .label .text_wrapper {
     border-bottom-style: solid;
 }
 
