Refactored the woost.controllers.otifications API.
Instead of using tuples to represent notifications, use instances of the new
Notification class. The API remains mostly compatible with the previous one; the
only incompatible changes are in the NotificationBox view ("notification"
elements renamed to "notification_entry", and they now receive a Notification
object instead of a tuple).

The new API makes it possible to implement more complex notifications, such as
notifications with alternative views (for example, to offer embeded controls) or
with arbitrary state.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2020,13 +2020,13 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     bottom: 0;
 }
 
-.BackOfficeLayout .notification {
+.BackOfficeLayout .notification_entry {
     padding: 0.8em;
     width: 50%;
     margin: auto;
 }
 
-.BackOfficeLayout .notification .close_notification_button {
+.BackOfficeLayout .notification_entry .close_notification_button {
     float: right;
     background-image: none;
     background-color: transparent;
