ItemContextMenu elements appeared briefly before the page was loaded.
Some clients are not fast enough hiding the context menus when the page loads,
so the end user ends up seeing them for a short moment. Rely on the
body.scripted selector to (hopefully) hide them faster.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -3677,8 +3677,12 @@ div.success_label {
     color: #333;
 }
 
-.BackOfficeLayout .ItemContextMenu[data-woost-context-menu-state='closed'] {
+.scripted .BackOfficeLayout .ItemContextMenu {
     display: none;
+}
+
+.BackOfficeLayout .ItemContextMenu[data-woost-context-menu-state='expanded'] {
+    display: block;
 }
 
 .BackOfficeLayout .ItemContextMenu .item_actions {
