Adapted to the new API for generating read only displays in cocktail.
See cocktail changeset 4a448ab2e768 for details.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -565,7 +565,7 @@ body.modal {
     padding: 0.5em;
 }
 
-.BackOfficeLayout .Form .control[cocktail-editable='read_only'] {
+.BackOfficeLayout .Form .control[data-cocktail-editable='read_only'] {
     color: #555;
 }
 
