Improvements to the ChangeLog view.
- Added the show_implicit_changes property
- Added the show_diffs property
- (Optionally) group similar changes. Controlled with the new
  change_grouping_threshold property.
- Exclude members from diffs (not versioned, invisible or forbidden members)

--- a/woost/views/resources/styles/ChangeLog.css
+++ b/woost/views/resources/styles/ChangeLog.css
@@ -65,15 +65,15 @@
     color: #600;
 }
 
-.ChangeLog .change_target_display {
-    margin-left: 0.4em !important;
+.ChangeLog .change_action_display {
+    margin-right: 0.4em !important;
 }
 
 .ChangeLog .change_diff {
     margin-top: 0.6em;
     margin-bottom: 1.5em;
-    border: 1px solid #ddd;
     padding: 0.4em;
-    box-shadow: 0 2px 2px #ddd;
+    background-color: #eee;
+    border: 1px solid #e5e5e5;
 }
 
