--- a/woost/views/resources/styles/TranslationWorkflowRequestForm.css
+++ b/woost/views/resources/styles/TranslationWorkflowRequestForm.css
@@ -5,7 +5,7 @@
     margin-right: 0.8em;
     background-color: #f5f5f5;
     border: 1px solid #ccc;
-    padding: 0.1em;
+    padding: 0.15em 0.2em;
 }
 
 .TranslationWorkflowRequestForm .field_instance-TextArea .translation_source_display {
