--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -574,6 +574,11 @@ body.modal {
 .BackOfficeLayout .field select.control,
 .BackOfficeLayout .field .Autocomplete .text_box {
     width: 18em;
+    box-sizing: border-box;
+}
+
+.BackOfficeLayout .field select.control {
+    padding: 0.1em;
 }
 
 .BackOfficeLayout .field input.ColorPicker {
@@ -2604,23 +2609,19 @@ button.TypeSelectorButton span {
     font-size: 85%;
     margin-top: 1em;
     border: 1px solid #ccc;
-    background-color: #eee;
+    background-color: #f5f5f5;
     padding: 0.5em;
+    padding-top: 0;
 }
 
-.BackOfficeLayout .CollectionView .filters .filters_label {
-    padding-bottom: 0.2em;
-    color: #333;
-    font-weight: bold;
-    border-bottom: 1px solid #ddd;
-}
-
-.BackOfficeLayout .CollectionView .filters .FilterBox {
-    padding-top: 1em;
+.BackOfficeLayout .CollectionView .filters > .filters_selector > .buttons > button {
+    margin-left: 0.5em;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry {
     clear: left;
+    border-bottom: 1px dotted #ccc;
+    padding: 0.5em 0;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry .field {
@@ -2632,8 +2633,15 @@ button.TypeSelectorButton span {
 .BackOfficeLayout .FilterBox .filter_entry .fields,
 .BackOfficeLayout .FilterBox .filter_entry .field,
 .BackOfficeLayout .FilterBox .filter_entry .field_instance {
+    float: none !important;
     clear: none !important;
-    float: left !important;
+    display: inline-block !important;
+    vertical-align: middle;
+}
+
+.BackOfficeLayout .FilterBox .filter_entry .field_instance .control,
+.BackOfficeLayout .FilterBox .filter_entry .field_instance .Autocomplete.control .text_box {
+    font-size: 1em;
 }
 
 .BackOfficeLayout .FilterBox .filter_entry fieldset {
@@ -2641,24 +2649,22 @@ button.TypeSelectorButton span {
     padding: 0;
 }
 
-.BackOfficeLayout .FilterBox .deleteButton {
+.BackOfficeLayout .FilterBox .delete_filter_button {
     position: relative;
-    top: 0.5em;
-    font-size: 0.8em;
+    top: 0.2em;
+    font-size: 1.2em;
+    text-decoration: none;
+    color: #888;
+}
+
+.BackOfficeLayout .FilterBox .delete_filter_button:hover {
+    color: #333;
 }
 
 .BackOfficeLayout .CollectionView .filters .filter_desc {
-    min-width: 10em;
+    width: 18em;
     margin-top: 0.3em;
     margin-right: 1em;
-}
-
-.BackOfficeLayout .FilterBox .filter_entry .language_field .control {
-    width: 12em;
-}
-
-.BackOfficeLayout .FilterBox .operator_field .control {
-    width: 10em;
 }
 
 .BackOfficeLayout .CollectionView .filters .buttons {
@@ -2666,7 +2672,7 @@ button.TypeSelectorButton span {
 }
 
 .BackOfficeLayout .CollectionView .filters:not(.empty) .buttons {
-    margin-top: 2em;
+    margin-top: 0.5em;
 }
 
 .BackOfficeLayout .CollectionView .filters .buttons button {
@@ -2688,11 +2694,9 @@ button.TypeSelectorButton {
 .BackOfficeLayout .CollectionView .filters .discard_button,
 .BackOfficeLayout .CollectionView .filters .new_filter_selector {
     float: left;
-    margin-top: 0.5em;
 }
 
 .BackOfficeLayout .CollectionView .filters .new_filter_selector {
-    margin-right: 1em;
     margin-left: -0.4em;
 }
 
@@ -2708,6 +2712,7 @@ button.TypeSelectorButton {
 }
 
 .BackOfficeLayout .CollectionView .filters .new_filter_selector .panel {
+    text-align: left;
     overflow: auto;
     max-height: 30em;
     min-width: 19em;
@@ -2722,6 +2727,17 @@ button.TypeSelectorButton {
     text-align: left;
     padding: 0;
     margin: 0.8em 0;
+    color: black;
+}
+
+.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel a.no_match {
+    display: none;
+}
+
+.BackOfficeLayout .CollectionView .filters .new_filter_selector .panel a mark {
+    font-weight: bold;
+    background-color: transparent;
+    color: inherit;
 }
 
 .modal_selector_dialog {
