translationworkflow: fixes for transition notifications and default transitions.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -2084,6 +2084,8 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 }
 
 .BackOfficeLayout .notification_box .notification_entry {
+    border: 2px solid #bbb;
+    background-color: #eee;
     border-bottom: none !important;
     box-shadow: 0 14px 14px rgba(20,20,20,0.3);
 }
@@ -2100,9 +2102,15 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     border: none;
     box-shadow: none;
     cursor: pointer;
+    color: #666;
 }
 
-.BackOfficeLayout .success {
+.BackOfficeLayout .notification_entry .close_notification_button:hover {
+    color: #333;
+}
+
+.BackOfficeLayout .success,
+.BackOfficeLayout .notification_box .notification_entry.success {
     border: 2px solid #94b393;
     background-color: rgb(220,240,220);
 }
