Allow text selection in backoffice item labels

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -287,6 +287,8 @@ body {
     display: inline-block;
     background-repeat: no-repeat;
     text-decoration: none;
+    user-select: text;
+    -webkit-user-select: text;
 }
 
 .BackOfficeLayout .ItemLabel.with_icon {
