Hide collage listings until their layout is ready (ie. images are loaded)

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -179,6 +179,14 @@
 
 /* PublishableCollage
 -----------------------------------------------------------------------------*/
+.scripted .PublishableCollage {
+    visibility: hidden;
+}
+
+.scripted .PublishableCollage.layout_ready {
+    visibility: visible;
+}
+
 .PublishableCollage .publishable_list {
     list-style-type: none;
     padding: 0;
